Add Basic (integer) Event Processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(flight_track)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(flight_track main.cpp Observer.h DatabaseClient.cpp DatabaseClient.h Observable.h FlightTracker.cpp FlightTracker.h)
+add_executable(flight_track main.cpp Observer.h DatabaseClient.cpp DatabaseClient.h Observable.h FlightTracker.cpp FlightTracker.h SafeQueue.h UIClient.cpp UIClient.h)
