Added (basic) UI framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(flight_track)
 
 set(CMAKE_CXX_STANDARD 20)
 
+find_package(wxWidgets REQUIRED COMPONENTS net core base)
+if(wxWidgets_USE_FILE) # not defined in CONFIG mode
+    include(${wxWidgets_USE_FILE})
+endif()
+
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/thirdparty/SQLiteCpp)
 add_executable(flight_track main.cpp Observer.h DatabaseClient.cpp DatabaseClient.h Observable.h FlightTracker.cpp FlightTracker.h SafeQueue.h UIClient.cpp UIClient.h)
 target_link_libraries(flight_track
@@ -10,4 +15,5 @@ target_link_libraries(flight_track
         sqlite3
         pthread
         dl
+        ${wxWidgets_LIBRARIES}
         )
