added (templatable) event class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if(wxWidgets_USE_FILE) # not defined in CONFIG mode
 endif()
 
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/thirdparty/SQLiteCpp)
-add_executable(flight_track main.cpp SeparateThreadObserver.h DatabaseClient.cpp DatabaseClient.h Observable.h FlightTracker.cpp FlightTracker.h SafeQueue.h UIClient.cpp UIClient.h Observer.h)
+add_executable(flight_track main.cpp SeparateThreadObserver.h DatabaseClient.cpp DatabaseClient.h Observable.h FlightTracker.cpp FlightTracker.h SafeQueue.h UIClient.cpp UIClient.h Observer.h FlightStatusEvent.h)
 target_link_libraries(flight_track
         SQLiteCpp
         sqlite3
