fix cpprestsdk link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(OPENSSL_ROOT_DIR "/opt/homebrew/Cellar/openssl@3/3.2.0")
 set(OPENSSL_INCLUDE_DIR "/opt/homebrew/Cellar/openssl@3/3.2.0/include")
+set(CPPRESTSDK_INCLUDE_DIR "/opt/homebrew/Cellar/cpprestsdk/2.10.18_1/include")
+
 find_package(OpenSSL REQUIRED)
-
 find_package(cpprestsdk REQUIRED)
-
 find_package(wxWidgets REQUIRED COMPONENTS net core base)
 if(wxWidgets_USE_FILE) # not defined in CONFIG mode
     include(${wxWidgets_USE_FILE})
@@ -41,10 +41,17 @@ else (DOXYGEN_FOUND)
     message("Doxygen need to be installed to generate the doxygen documentation")
 endif (DOXYGEN_FOUND)
 
-add_executable(flight_track main.cpp SeparateThreadObserver.h DatabaseClient.cpp DatabaseClient.h Observable.h FlightTracker.cpp FlightTracker.h SafeQueue.h UIClient.cpp UIClient.h Observer.h FlightStatusEvent.h
-        FlightStatusEvent.cpp
-        OpenSkyRESTClient.cpp
-        OpenSkyRESTClient.h)
+add_executable(flight_track main.cpp
+        SeparateThreadObserver.h
+        DatabaseClient.cpp DatabaseClient.h
+        Observable.h
+        FlightTracker.cpp FlightTracker.h
+        SafeQueue.h
+        UIClient.cpp UIClient.h
+        Observer.h
+        FlightStatusEvent.h FlightStatusEvent.cpp
+        OpenSkyRESTClient.cpp OpenSkyRESTClient.h)
+
 target_link_libraries(flight_track
         SQLiteCpp
         sqlite3
