cleanup, add colors to UI!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,8 @@ add_executable(flight_track main.cpp
         Observer.h
         FlightStatusEvent.h FlightStatusEvent.cpp
         ADSBlolRESTClient.cpp ADSBlolRESTClient.h
-        MyFrame.cpp MyFrame.h MyFlightEvent.h)
+        FTFrame.cpp FTFrame.h
+        wxFlightEvent.h)
 
 target_link_libraries(flight_track
         SQLiteCpp
